git-bash셋팅 후 푸시

--- a/WebContent/Registration.html
+++ b/WebContent/Registration.html
@@ -38,7 +38,10 @@
     </style>
 </head>
 <body>
-    <table border="0" style="width: 1250px; height: 360px; font-size: 13px;">
+    <table border="0" style="margin-bottom: 30px; width: 780px; height: 360px; font-size: 13px;">
+        <colgroup>
+            <col style="width: 240px;">
+        </colgroup>
         <tr>
             <td colspan="2"><h2>회원정보(필수)</h2></td>
         </tr>
@@ -132,14 +135,17 @@
             <td></td>
         </tr>
     </table>
-    <table border="0" style="width: 1250px; font-size: 13px; background-color: lightgrey;">
+    <table border="0" style="margin-left: 10px; width: 780px; font-size: 13px; background-color: lightgrey;">
+        <colgroup>
+            <col style="width: 210px;">
+        </colgroup>
         <tr>
             <td colspan="2"><h2>부가정보(선택)</h2></td>
         </tr>
         <tr>
             <td>일반전화</td>
             <td>
-                <input type="tel" maxlength="3">&nbsp;-&nbsp;
+                <input type="tel" maxlength="3" class="a">&nbsp;-&nbsp;
                 <input type="tel" maxlength="4">&nbsp;-&nbsp;
                 <input type="tel" maxlength="4">
             </td>
@@ -182,12 +188,12 @@
                     <tr>
                         <td class="space"><input type="checkbox">한빛미디어</td>
                         <td class="space"><input type="checkbox">한빛아카데미</td>
-                        <td class="space"><input type="checkbox">한빛비즈</td>
+                        <td><input type="checkbox">한빛비즈</td>
                     </tr>
                     <tr>
                         <td class="space"><input type="checkbox">한빛라이프</td>
                         <td class="space"><input type="checkbox">리얼타임 eBook</td>
-                        <td class="space"><input type="checkbox">MAKE</td>
+                        <td><input type="checkbox">MAKE</td>
                     </tr>
                     <tr>
                         <td colspan="3"><input type="checkbox">한빛에듀</td>
@@ -205,22 +211,22 @@
                     <tr>
                         <td class="space"><input type="checkbox">프로그래밍 언어</td>
                         <td class="space"><input type="checkbox">웹</td>
-                        <td class="space"><input type="checkbox">모바일/게임</td>
+                        <td><input type="checkbox">모바일/게임</td>
                     </tr>
                     <tr>
                         <td class="space"><input type="checkbox">데이터베이스</td>
                         <td class="space"><input type="checkbox">네트워크/보안</td>
-                        <td class="space"><input type="checkbox">IT자격증/수험서</td>
+                        <td><input type="checkbox">IT자격증/수험서</td>
                     </tr>
                     <tr>
                         <td class="space"><input type="checkbox">OA/오피스</td>
                         <td class="space"><input type="checkbox">디자인</td>
-                        <td class="space"><input type="checkbox">사진/예술</td>
+                        <td><input type="checkbox">사진/예술</td>
                     </tr>
                     <tr>
                         <td class="space"><input type="checkbox">경제/경영</td>
                         <td class="space"><input type="checkbox">자기계발</td>
-                        <td class="space"><input type="checkbox">인문/사회/과학</td>
+                        <td><input type="checkbox">인문/사회/과학</td>
                     </tr>
                     <tr>
                         <td class="space"><input type="checkbox">여행/취미</td>
